# rm2_attachable

./: CMakeLists.txt  README.md  package.xml
config/: rm2_attachable.yaml
launch/: bridge.launch.py  rm2_sim.launch.py
models/edgar_cave/: model.sdf
models/rm2/rm2_leg/: model.sdf
models/rm2/rm2_sim/: model.sdf
scripts/: attach_node.py  rm2_attachable_node.py  rosActionServerMerger.py
test_attachable/: CMakeLists.txt  README.md  package.xml
test_attachable/launch/: rm2_sim_attach.launch.py
test_attachable/scripts/: rosActionServerMerger.py
test_attachable/worlds/: a.sdf
worlds/: cave_world.sdf  cave_world_robot.sdf
