<package format="3">
  <name>rm2_attachable</name>
  <version>0.0.1</version>
  <description>robominer</description>
  <license>Apache 2.0</license>
  <maintainer email="e.aguado@upm.es">Esther Aguado</maintainer>


  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>action_msgs</depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros_ign_gazebo</depend>

  <exec_depend>ros_ign_bridge</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend condition="$IGNITION_VERSION == citadel">ignition-gazebo3</exec_depend>
  <exec_depend condition="$IGNITION_VERSION == citadel">ignition-msgs5</exec_depend>
  <exec_depend condition="$IGNITION_VERSION == citadel">ignition-transport8</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
